# rigor

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  blog-post.md  corpus-run.md  devpost-submission.md  real-world.md
docs/adr/: 0001-model-reads-math-judges.md  0002-qwen-function-calling.md  0003-agent-not-pipeline.md  0004-human-in-the-loop.md  0005-deploy-on-alibaba-ecs.md  0006-mcp-server.md  0007-extraction-reconciliation.md  0008-error-localization.md  0009-adoption-surface.md  0010-honest-impact-metrics.md  README.md
rigor/: agent.py  audit.py  baseline.py  batch.py  benchmark.py  benchmark_checks.py  claims.py  cli.py  demo_checks.py  explain.py  extract.py  ingest.py  llm.py  localize.py  mcp_server.py  report.py  samples.py
rigor/checks/: __init__.py  consistency.py  effectsize.py  grim.py  grimmer.py  statcheck.py
tests/: test_audit_wiring.py  test_batch.py  test_consistency.py  test_effectsize.py  test_grim.py  test_grimmer.py  test_localize.py  test_metrics.py  test_reconcile.py  test_sanitize.py  test_statcheck.py
web/: app.py
web/static/: app.js  index.html  style.css
